<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name">百联</string>
    <string name="data_exception">数据异常，请稍后重试</string>
    <string name="net_exception">网络异常，请稍后重试</string>
    <string name="please_wait">请稍等&#8230;</string>
    <string name="load_failed_click_again">加载失败，点击重新加载</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="no_data">暂无数据</string>
    <string name="saveing">保存中&#8230;</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="add">新增</string>
    <string name="c_take_picture">拍照</string>
    <string name="c_take_picture_failed">拍照失败</string>
    <string name="c_photo_album">相册</string>
    <string name="c_photo_album_failed">选择失败</string>
    <string name="c_crop_failed">裁减失败</string>
    <string name="locationing">正在定位</string>
    <string name="current_location">当前位置</string>
    <string name="hot_city">热门城市</string>
    <string name="select_city_by_province">按省份选择城市</string>
    <string name="location_failed">定位失败</string>
    <string name="location_city">所在城市</string>
    <string name="select">选择</string>
    <string name="country">国家</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="county">县区</string>
    <string name="to_this_day">至今</string>
    <string name="friendly_time_just_now">刚刚</string>
    <string name="friendly_time_before_seconds">秒前</string>
    <string name="friendly_time_before_minute">分钟前</string>
    <string name="friendly_time_yesterday">昨天</string>
    <string name="friendly_time_before_yesterday">前天</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="please_input_name">请输入昵称</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_confirm_new_password">请确认新密码</string>
    <string name="please_input_keyword">请输入昵称或手机号</string>
    <string name="digits" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_password" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz
ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="digits_number" translatable="false">0123456789</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_telphone_login">使用手机号登录</string>
    <string name="register_account">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_failed">登陆失败</string>
    <string name="connected_failed">连接失败</string>
    <string name="switch_account">切换账号</string>
    <string name="data_update">数据更新</string>
    <string name="data_not_update_exit">用户数据尚未更新完毕，退出将放弃登陆，您是否要退出？</string>
    <string name="register_step_one">1、输入手机号</string>
    <string name="phone_number_format_error">手机号码格式错误</string>
    <string name="telphone_already_rigister">手机号已经被注册</string>
    <string name="phone_number_not_be_empty">手机号码不能为空</string>
    <string name="get_auth_code_failed">获取验证码失败，请重新发送</string>
    <string name="auth_code_error">验证码错误</string>
    <string name="auth_code_overdue">验证码失效</string>
    <string name="Get_Verification_Code">获取验证码</string>
    <string name="Password_Login">密码登录</string>
    <string name="Verification_Code_Login">验证码登录</string>
    <string name="register_step_two">2、填写密码</string>
    <string name="password_empty_error">密码不允许为空，且长度大于6个字符</string>
    <string name="confirm_password_empty_error">确认密码不允许为空，且长度大于6个字符</string>
    <string name="password_confirm_password_not_match">密码和确认密码不一致</string>
    <string name="cancel_register_prompt">是否退出该次注册？</string>
    <string name="register_step_three">3、基本资料</string>
    <string name="register_error">注册出错，请重试</string>
    <string name="register_success">注册成功</string>
    <string name="exit">退出</string>
    <string name="login_again">重新登陆</string>
    <string name="overdue_title">过期通知</string>
    <string name="token_overdue_des">本地访问令牌已过期，是否立即重新登陆？</string>
    <string name="deficiency_data_des">本地数据已过期，是否立即重新登陆？</string>
    <string name="logout_title">下线通知</string>
    <string name="logout_des">您的账号在另外一台设备上登录，是否立即重新登陆？</string>
    <string name="you_are_offline">您已经离线，是否重新连接</string>
    <string name="message">消息</string>
    <string name="find">发现</string>
    <string name="nearby">附近</string>
    <string name="group_chat">群聊</string>
    <string name="welcome_user_software">欢迎使用酷聊</string>
    <string name="msg_picture">[图片]</string>
    <string name="msg_voice">[语音]</string>
    <string name="msg_location">[位置]</string>
    <string name="msg_animation">[动画]</string>
    <string name="msg_video">[视频]</string>
    <string name="msg_file">[文件]</string>
    <string name="msg_online">消息(在线)</string>
    <string name="msg_offline">消息(离线)</string>
    <string name="msg_connect">消息(连接中)</string>
    <string name="msg_be_add_attention">有人关注了你</string>
    <string name="msg_be_say_hello">有人给你打招呼</string>
    <string name="msg_be_passed">我们已经是好友啦，开始聊天吧！</string>
    <string name="msg_has_new_friend">你有新朋友了</string>
    <string name="msg_has_new_recommend_friend">你有新的推荐朋友</string>
    <string name="chat_poto">照片</string>
    <string name="chat_camera">拍照</string>
    <string name="chat_send_video">录像</string>
    <string name="chat_audio">语音通话</string>
    <string name="chat_with_video">视频通话</string>
    <string name="chat_loc">位置</string>
    <string name="chat_file">文件</string>
    <string name="chat_card">名片</string>
    <string name="chat_red">讯聊红包</string>
    <string name="chat_kl_red">口令红包</string>
    <string name="chat_redpacket">发红包</string>
    <string name="chat_shake">戳一戳</string>
    <string name="chat_collection">收藏</string>
    <string name="chat_audio_conference">语音会议</string>
    <string name="send">发送</string>
    <string name="motalk_voice_chat_tip_1">按住 说话</string>
    <string name="motalk_voice_chat_tip_2">松开 发送</string>
    <string name="motalk_voice_chat_tip_3">手指上滑，取消发送</string>
    <string name="motalk_voice_chat_tip_4">松开手指，取消发送</string>
    <string name="motalk_voice_chat_tip_5">重新录制</string>
    <string name="motalk_voice_chat_tip_6">松开结束</string>
    <string name="read_burn">阅后即焚</string>
    <string name="newest">互相关注</string>
    <string name="hotest">单向关注</string>
    <string name="nearest">关注房间</string>
    <string name="bisniss">我的朋友</string>
    <string name="remark_name_format_error">备注名不合法，只允许中文、英文、字母和下划线，且长度为3至10个字符</string>
    <string name="unilateral_attention">单向关注</string>
    <string name="focus_on_each_other">互相关注</string>
    <string name="focus_room">关注房间</string>
    <string name="set_remark_name">设置备注名称</string>
    <string name="remove_blacklist">移出黑名单</string>
    <string name="check_circle">查看朋友圈</string>
    <string name="remove_blacklist_succ">移出黑名单成功</string>
    <string name="add_blacklist">加入黑名单</string>
    <string name="add_blacklist_succ">加入黑名单成功</string>
    <string name="add_blacklist_fail">加入黑名单失败</string>
    <string name="add_blacklist_prompt">确定要加入黑名单吗？</string>
    <string name="remove_blacklist_prompt">确定要移出黑名单吗</string>
    <string name="his_in_the_blacklist">已将对方加入黑名单</string>
    <string name="cancel_attention">取消关注</string>
    <string name="delete_all">彻底删除</string>
    <string name="cancel_attention_prompt">确定要取消关注吗？</string>
    <string name="delete_all_prompt">彻底删除操作，如果对方也关注了你，那么也将取消对方对你的关注，确定要彻底删除吗？</string>
    <string name="cancel_attention_succ">取消关注成功</string>
    <string name="delete_all_succ">删除成功</string>
    <string name="new_friend">新的朋友</string>
    <string name="add_attention">加关注</string>
    <string name="wait_verification">等待验证</string>
    <string name="add_attention_succ">加关注成功</string>
    <string name="add_attention_failed">加关注失败，你已被对方加入黑名单</string>
    <string name="passed">已通过</string>
    <string name="agreed">已同意</string>
    <string name="is_the_friend">已互为好友</string>
    <string name="say_hello">打招呼</string>
    <string name="say_hello_again">再打招呼</string>
    <string name="send_msg">发消息</string>
    <string name="say_hello_succ">打招呼成功</string>
    <string name="add_friend_succ">加好友成功</string>
    <string name="agree">同意</string>
    <string name="feedback_succ">回话成功</string>
    <string name="feedback">回话</string>
    <string name="simple_data_error">数据错误</string>
    <string name="send_failed">发送失败，请稍后重试</string>
    <string name="say_hello_dialog_title">验证消息</string>
    <string name="say_hello_dialog_hint">亲，给我个加你的理由吧！</string>
    <string name="say_hello_default">嘿，你好！</string>
    <string name="refused_request">对方拒绝了你的好友请求!</string>
    <string name="keyword">关键字</string>
    <string name="sex">性别</string>
    <string name="min_age">最小年龄</string>
    <string name="max_age">最大年龄</string>
    <string name="show_time">出现时间</string>
    <string name="all_date">所有日期</string>
    <string name="all">全部</string>
    <string name="reset">重置</string>
    <string name="select_date">选择日期</string>
    <string name="add_friend">添加好友</string>
    <string name="instance_person">距离</string>
    <string name="instance_">米</string>
    <string name="send_myspace">发表到朋友圈</string>
    <string name="send_text">发布文字</string>
    <string name="send_image">发布图片</string>
    <string name="send_audio">发布语音</string>
    <string name="send_video">发布视频</string>
    <string name="delete_prompt">确定要删除吗？</string>
    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="praise">赞</string>
    <string name="cancel_praise">取消赞</string>
    <string name="comment">评论</string>
    <string name="send_gift">送礼物</string>
    <string name="replay_text">回复<xliff:g id="nick_name">%1$s</xliff:g>:</string>
    <string name="replay"> 回复 </string>
    <string name="upload_failed">上传失败</string>
    <string name="pictures">图片</string>
    <string name="level_inner"><xliff:g id="level">%1$d</xliff:g>级</string>
    <string name="give_gift">送礼物</string>
    <string name="my_business_circle">我的职业圈</string>
    <string name="check_praise">查看点赞</string>
    <string name="add_department">添加部门</string>
    <string name="modify_company_name">修改公司名称</string>
    <string name="exit_company">退出公司</string>
    <string name="delc_company">删除公司</string>
    <string name="add_son_department">添加子部门</string>
    <string name="add_employee">添加成员</string>
    <string name="modify_department_name">修改部门名称</string>
    <string name="delc_departm">删除部门</string>
    <string name="finish">完成</string>
    <string name="my_change">我的零钱</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="tag">标签</string>
    <string name="remark_tag">添加标签对联系人进行分类</string>
    <string name="change_password">修改密码</string>
    <string name="report">举报</string>
    <string name="add_black_list">加入黑名单</string>
    <string name="remove_black_list">移出黑名单</string>
    <string name="thoroughly_delete">彻底删除</string>
    <string name="latest_comments">最新评论</string>
    <string name="remark">备注名</string>
    <string name="tip_input_remark">请输入备注名</string>
    <string name="public_a_file">发布文件</string>
    <string name="btn_change_pay_password">修改支付密码</string>
    <string name="tip_change_pay_password_input_old">请输入支付密码，以验证身份</string>
    <string name="send_image_text">发送图文</string>
    <string name="set_remark_and_label">设置备注和标签</string>
    <string name="tip_input_describe">请输入描述</string>
    <string name="describe">描述</string>
    <string name="label_migrate_chat_to_another_device">迁移聊天记录到另一台设备</string>
    <string name="tip_migrate_chat_need_wifi">请将两台设备接入同一Wi-Fi或相同热点</string>
    <string name="btn_select_chat">选择聊天记录</string>
</resources>