<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical">

    <include layout="@layout/a_view_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/department_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/normal_bg"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:text="@string/remark" />

        <com.ydd.zhichat.view.ClearEditText
            android:id="@+id/department_edit"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/remark_edit_ios"
            android:hint="@string/tip_input_remark"
            android:inputType="text"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:text=""
            android:textSize="@dimen/one_level_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:text="@string/tag" />

        <RelativeLayout
            android:id="@+id/rlLabel"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:id="@+id/tv_setting_label"
                style="@style/IMTbleLine_TextKey"
                android:layout_height="56dp"
                android:layout_width="match_parent"
                android:background="@drawable/remark_edit"
                android:gravity="left|center_vertical"
                android:paddingLeft="12dp"
                android:text="@string/remark_tag" />

            <ImageView
                android:id="@+id/name_arrow_img3"
                style="@style/IMTbleLine_ArrowImg"
                android:layout_marginRight="12dp"
                android:contentDescription="@string/app_name"
                android:visibility="visible" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/normal_bg"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:text="@string/describe" />

        <com.ydd.zhichat.view.ClearEditText
            android:id="@+id/etDescribe"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/remark_edit_ios"
            android:hint="@string/tip_input_describe"
            android:inputType="text"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingTop="8dp"
            android:text=""
            android:textSize="@dimen/one_level_title" />

    </LinearLayout>

</LinearLayout>