<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/a_view_actionbar" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_migrate_chat_to_another_device"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tip_migrate_chat_need_wifi" />


    <Button
        android:id="@+id/btnSelectChat"

        style="@style/BossGreenBtn"
        android:background="@drawable/ql_l_g_bg_ripple"
        android:text="@string/btn_select_chat"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible" />

</LinearLayout>