<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/a_view_actionbar" />

    <TextView
        android:id="@+id/tvAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/change_password"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="@dimen/sp_12_text_size"
        android:text="@string/tip_change_pay_password_input_old" />

    <com.jungly.gridpasswordview.GridPasswordView
        android:id="@+id/gpvPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp" />

    <TextView
        android:id="@+id/tvFinish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/weixin_text_yuanjiao_xuanzheqi"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="@dimen/one_level_title"
        android:visibility="gone" />


</LinearLayout>
