<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/a_view_actionbar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/weixinpayyue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/my_change"
        android:textColor="@color/color_black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/myblance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/color_black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chongzhi"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/weixin_text_yuanjiao_xuanzheqi"
        android:gravity="center"
        android:text="@string/recharge"
        android:textColor="@color/white"
        android:textSize="@dimen/one_level_title" />

    <TextView
        android:id="@+id/quxian"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/weixin_text_yuanjiao_white_xuanzheqi"
        android:gravity="center"
        android:text="@string/withdraw"
        android:textColor="@color/color_black"
        android:textSize="@dimen/one_level_title" />

    <TextView
        android:id="@+id/tvPayPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/weixin_text_yuanjiao_white_xuanzheqi"
        android:gravity="center"
        android:text="@string/btn_change_pay_password"
        android:textColor="@color/color_black"
        android:textSize="@dimen/one_level_title" />

</LinearLayout>
