<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/pno"
              android:orientation="vertical">

    <TextView
        android:id="@+id/set_remark_nameS"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:visibility="visible"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/set_remark_and_label"
        android:textColor="@color/white"
        android:textSize="@dimen/pop_window"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:visibility="visible"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/pop_line_for_black_bg"/>

    <TextView
        android:id="@+id/add_blacklist"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/add_black_list"
        android:textColor="@color/white"
        android:textSize="@dimen/pop_window"/>

    <View
        android:id="@+id/add_blacklist_v"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/pop_line_for_black_bg"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/remove_blacklist"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/remove_black_list"
        android:textColor="@color/white"
        android:textSize="@dimen/pop_window"/>

    <View
        android:id="@+id/remove_blacklist_v"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/pop_line_for_black_bg"/>

    <TextView
        android:id="@+id/delete_tv"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/thoroughly_delete"
        android:textColor="@color/white"
        android:textSize="@dimen/pop_window"/>

    <View
        android:id="@+id/delete_tv_v"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/pop_line_for_black_bg"/>

    <TextView
        android:id="@+id/report_tv"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/report"
        android:textColor="@color/white"
        android:textSize="@dimen/pop_window"/>

</LinearLayout>