<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_add_department"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/add_department"
        android:textColor="@color/black"
        android:textSize="@dimen/pop_window" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pop_line" />

    <TextView
        android:id="@+id/tv_motify_cpn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:singleLine="true"
        android:text="@string/modify_company_name"
        android:textColor="@color/black"
        android:textSize="@dimen/pop_window" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pop_line" />

    <TextView
        android:id="@+id/tv_quit_company"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/exit_company"
        android:textColor="@color/black"
        android:textSize="@dimen/pop_window" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pop_line" />

    <TextView
        android:id="@+id/tv_delete_company"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/delc_company"
        android:textColor="@color/black"
        android:textSize="@dimen/pop_window" />

</LinearLayout>