<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_add_group"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/add_son_department"
        android:textColor="@color/black"
        android:textSize="@dimen/pop_window" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pop_line" />

    <TextView
        android:id="@+id/tv_add_employee"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/add_employee"
        android:textColor="@color/black"
        android:textSize="@dimen/pop_window" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pop_line" />

    <TextView
        android:id="@+id/tv_motify_dmn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:singleLine="true"
        android:text="@string/modify_department_name"
        android:textColor="@color/black"
        android:textSize="@dimen/pop_window" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/pop_line" />

    <TextView
        android:id="@+id/tv_delete_department"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        android:text="@string/delc_departm"
        android:textColor="@color/black"
        android:textSize="@dimen/pop_window" />

</LinearLayout>